Update html & css

--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <h2>BERKSHIRE HATHAWAY INC.</h2>
-    <b>3555 Farnam Street</b><br>
-    <b>Omaha, NE 68131</b><br>
-    <b>Official Home Page</b><br>
+<body align="center">
+    <b>
+    <font size="6">B</font><font size="4">ERKSHIRE </font>
+    <font size="6">H</font><font size="4">ATHAWAY </font>
+    <font size="2">INC.<br>
+    3555 Farnam Street<br>
+    Omaha, NE 68131  
+    </font> <br>
+    Official Home Page 
+    </b>
 </body>     
 
 <hr> 
@@ -48,22 +53,25 @@
 
 <hr>
 
-<footer>
-
-    <button onclick="window.location.href='https://www.geico.com/'">
-        <img src="Assets/geicoimg.gif" alt="buttonpng" border="0" />
-    </button>
-
+<footer align="center">
+    <font size="1">
+        <a href="https://www.geico.com/"><img src="Assets/geicoimg.gif"></a>
     <p>FOR A FREE CAR INSURANCE RATE QUOTE THAT COULD SAVE YOU SUBSTANTIAL MONEY <br>
         <a href="https://www.geico.com/">WWW.GEICO.COM</a> OR CALL 1-888-395-6349, 24 HOURS A DAY</p>
+    </font>
 </footer>
-
-    <hr>
-        <p>If you have any comments about our WEB page, you can write us at the address shown above. However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
-    <hr>
     
-    <a href="https://www.berkshirehathaway.com/disclaimer.html">Legal Disclaimer</a>
-    <p>Copyright © 1978-2023 <b>Berkshire Hathaway Inc.</b></p>
+<hr>
 
+    <font size="2">
+        <p align=left>If you have any comments about our WEB page, you can write us at the address shown above. However, due to the limited number of personnel in our corporate office, we are unable to provide a direct response.</p>
+
+<hr>
+
+    <p align="left">
+        <a href="https://www.berkshirehathaway.com/disclaimer.html">Legal Disclaimer</a>
+        <p align="left">Copyright © 1978-2023 <b>Berkshire Hathaway Inc.</b></p>
+    </p>
+    </font>
 
 </html>
