--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <hr> 
    
     <div class="link-table">
-        <div class=link-column-left>
+        <div class=link-column>
             <ul>
                 <li><a href="https://www.berkshirehathaway.com/message.html">A Message from Warren E. Buffet</a></li> <br>
                 <li><a href="https://www.berkshirehathaway.com/reports.html">Annual & Interim Reports</a><br><font size="1">Updated Februrary 27, 2023</font> </li><br>
@@ -34,10 +34,10 @@
                 <li><a href="https://www.berkshirehathaway.com/sustainability/sustainabilityintro.html">Sustainability</a></li> <br>
                 <li><a href="https://www.berkshirehathaway.com/donate/webdonat.html">Information Regarding Warren E. Buffett's Annual Contributions to Five Foundations</a></li> <br>
                 <li><a href="http://www.berkshirewear.com/">Berkshire Activewear</a></li><br>
-            </ul>
+            </ul>  
         </div>
         
-        <div class=link-column-right>
+        <div class=link-column>
             <ul>
                 <li><a href="https://www.berkshirehathaway.com/news/2023news.html">News Releases from Berkshire Hathaway and from Warren Buffet</a><br><font size="1">Updated April 27, 2023</font></li> <br>
                 <li><a href="https://www.berkshirehathaway.com/sharehold.html">Annual Meeting Information</a><br><font size="1">Updated Februrary 28, 2023</font></li> <br>
@@ -47,7 +47,7 @@
                 <li><a href="https://www.ebay.com/itm/185106486239">Celebrating 50 Years of a Profitable Partnership</a><br><font size="1">(A commemorative book first sold at the 2015 Annual Meeting and now for sale on eBay.)</font></li> <br>
                 <li><a href="https://www.berkshirehathaway.com/brkshareholderinfo/brkshareholderinfo.html">Common Stock Information</a></li> <br>
                 <li><a href="https://www.berkshirehathaway.com/activisionltr.pdf">Facts Regarding Berkshire's 2021 Investments in Activision Common Stock</a></li> <br>
-            </ul>
+            </ul>    
         </div>
     </div>
 
